--- a/index.html
+++ b/index.html
@@ -685,7 +685,8 @@
                     <div id="myPoints">
                         <p>Math Swag Points:
                             <br />
-                            <em class="aboutVideoText">Watch the video below to learn how to play</em>
+                            <em class="aboutVideoText">Instructions Below</em>
+                            <br />
                             <span id="totalPoints">
                             </span>
                         </p>
@@ -725,7 +726,7 @@
                         <div id="metaphorsimile1"></div>
                     </div>
                 <details>
-                	<summary>Click Here to Learn How to Play </summary>
+                	<summary>Instructions</summary>
                 	
                     <div id="mathExample">
                         <object width="240" height="180">
