--- a/index.html
+++ b/index.html
@@ -523,6 +523,8 @@
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.21/themes/base/jquery-ui.css"
         type="text/css" media="all" />
         <script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js" type="text/javascript"></script>
+        <script type="text/javascript" charset="utf-8" src="cordova-2.3.0.js"></script>
+        <script type="text/javascript" charset="utf-8"></script>
     </head>
     
     <body>
@@ -764,62 +766,62 @@
             var key = new Array();
             
             for(var i=0; i<3; i++) {
-            	key["key1"+i] = new Audio("Audio/key1_C1.ogg");
+            	key["key1"+i] = new Media("Audio/key1_C1.ogg");
             }
             for(var i=0; i<3; i++) {
-	            key["key2"+i] = new Audio("Audio/key2_CC1.ogg");
+	            key["key2"+i] = new Media("Audio/key2_CC1.ogg");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key3"+i] = new Audio("Audio/key3_D1.ogg");
+	            key["key3"+i] = new Media("Audio/key3_D1.ogg");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key4"+i] = new Audio("Audio/key4_DD1.ogg");
+	            key["key4"+i] = new Media("Audio/key4_DD1.ogg");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key5"+i] = new Audio("Audio/key5_E1.ogg");
+	            key["key5"+i] = new Media("Audio/key5_E1.ogg");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key6"+i] = new Audio("Audio/key6_F1.ogg");
+	            key["key6"+i] = new Media("Audio/key6_F1.ogg");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key7"+i] = new Audio("Audio/key7_FF1.ogg");
+	            key["key7"+i] = new Media("Audio/key7_FF1.ogg");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key8"+i] = new Audio("Audio/key8_G1.ogg");
+	            key["key8"+i] = new Media("Audio/key8_G1.ogg");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key9"+i] = new Audio("Audio/key9_GG1.ogg");
+	            key["key9"+i] = new Media("Audio/key9_GG1.ogg");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key10"+i] = new Audio("Audio/key10_A1.ogg");
+	            key["key10"+i] = new Media("Audio/key10_A1.ogg");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key11"+i] = new Audio("Audio/key11_AA1.ogg");
+	            key["key11"+i] = new Media("Audio/key11_AA1.ogg");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key12"+i] = new Audio("Audio/key12_B1.ogg");
+	            key["key12"+i] = new Media("Audio/key12_B1.ogg");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key13"+i] = new Audio("Audio/key13_C2.ogg");
+	            key["key13"+i] = new Media("Audio/key13_C2.ogg");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key14"+i] = new Audio("Audio/key14_CC2.ogg");
+	            key["key14"+i] = new Media("Audio/key14_CC2.ogg");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key15"+i] = new Audio("Audio/key15_D2.ogg");
+	            key["key15"+i] = new Media("Audio/key15_D2.ogg");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key16"+i] = new Audio("Audio/key16_DD2.ogg");
+	            key["key16"+i] = new Media("Audio/key16_DD2.ogg");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key17"+i] = new Audio("Audio/key17_E2.ogg");
+	            key["key17"+i] = new Media("Audio/key17_E2.ogg");
 	        }
 
             var makeVerse = new Array();
-            makeVerse["makeVerse1"] = new Audio("Audio/makeverse1.ogg");
-            makeVerse["makeVerse2"] = new Audio("Audio/makeverse2.ogg");
-            makeVerse["makeVerse3"] = new Audio("Audio/makeverse3.ogg");
-            makeVerse["makeVerse4"] = new Audio("Audio/makeverse4.ogg");
+            makeVerse["makeVerse1"] = new Media("Audio/makeverse1.ogg");
+            makeVerse["makeVerse2"] = new Media("Audio/makeverse2.ogg");
+            makeVerse["makeVerse3"] = new Media("Audio/makeverse3.ogg");
+            makeVerse["makeVerse4"] = new Media("Audio/makeverse4.ogg");
 
             // var grindMessage = new Array("Practice-Skills", "Ask-for-Opinions", "Use-Lyrical-Devices", "Promote-Your-Work");
             //             
