--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -518,12 +518,12 @@
 			.clearfix { display: block; }
 			/* close commented backslash hack */
         </style> 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"
-        type="text/javascript"></script>
-        <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.21/themes/base/jquery-ui.css"
-        type="text/css" media="all" />
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+        
         <script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js" type="text/javascript"></script>
-        <script src="phonegap.js"></script>
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.21/themes/base/jquery-ui.css" type="text/css" media="all" />
+       
+        <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
         <script type="text/javascript" charset="utf-8" src="cordova-2.3.0.js"></script>
         <script>
 
