--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -756,6 +756,7 @@
                     </div>
                 </details>
                 <!--OK start here -->
+            	</div>
             </div>
         </div>
         <script type="text/javascript" src="ProbFile/problems.js"></script>
@@ -780,55 +781,55 @@
             var key = new Array();
             
             for(var i=0; i<3; i++) {
-            	key["key1"+i] = new Media("Audio/key1_C1.ogg");
+            	key["key1"+i] = new Media("/android_asset/www/Audio/key1_C1.mp3");
             }
             for(var i=0; i<3; i++) {
-	            key["key2"+i] = new Media("Audio/key2_CC1.ogg");
+	            key["key2"+i] = new Media("/android_asset/www/Audio/key2_CC1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key3"+i] = new Media("Audio/key3_D1.ogg");
+	            key["key3"+i] = new Media("/android_asset/www/Audio/key3_D1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key4"+i] = new Media("Audio/key4_DD1.ogg");
+	            key["key4"+i] = new Media("/android_asset/www/Audio/key4_DD1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key5"+i] = new Media("Audio/key5_E1.ogg");
+	            key["key5"+i] = new Media("/android_asset/www/Audio/key5_E1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key6"+i] = new Media("Audio/key6_F1.ogg");
+	            key["key6"+i] = new Media("/android_asset/www/Audio/key6_F1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key7"+i] = new Media("Audio/key7_FF1.ogg");
+	            key["key7"+i] = new Media("/android_asset/www/Audio/key7_FF1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key8"+i] = new Media("Audio/key8_G1.ogg");
+	            key["key8"+i] = new Media("/android_asset/www/Audio/key8_G1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key9"+i] = new Media("Audio/key9_GG1.ogg");
+	            key["key9"+i] = new Media("/android_asset/www/Audio/key9_GG1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key10"+i] = new Media("Audio/key10_A1.ogg");
+	            key["key10"+i] = new Media("/android_asset/www/Audio/key10_A1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key11"+i] = new Media("Audio/key11_AA1.ogg");
+	            key["key11"+i] = new Media("/android_asset/www/Audio/key11_AA1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key12"+i] = new Media("Audio/key12_B1.ogg");
+	            key["key12"+i] = new Media("/android_asset/www/Audio/key12_B1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key13"+i] = new Media("Audio/key13_C2.ogg");
+	            key["key13"+i] = new Media("/android_asset/www/Audio/key13_C2.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key14"+i] = new Media("Audio/key14_CC2.ogg");
+	            key["key14"+i] = new Media("/android_asset/www/Audio/key14_CC2.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key15"+i] = new Media("Audio/key15_D2.ogg");
+	            key["key15"+i] = new Media("/android_asset/www/Audio/key15_D2.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key16"+i] = new Media("Audio/key16_DD2.ogg");
+	            key["key16"+i] = new Media("/android_asset/www/Audio/key16_DD2.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key17"+i] = new Media("Audio/key17_E2.ogg");
+	            key["key17"+i] = new Media("/android_asset/www/Audio/key17_E2.mp3");
 	        }
 
             var makeVerse = new Array();
