--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -781,62 +781,62 @@
             var key = new Array();
             
             for(var i=0; i<3; i++) {
-            	key["key1"+i] = new Audio("/android_asset/www/Audio/key1_C1.mp3");
+            	key["key1"+i] = new Media("/android_asset/www/key1_C1.mp3");
             }
             for(var i=0; i<3; i++) {
-	            key["key2"+i] = new Audio("/android_asset/www/Audio/key2_CC1.mp3");
+	            key["key2"+i] = new Media("/android_asset/www/key2_CC1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key3"+i] = new Audio("/android_asset/www/Audio/key3_D1.mp3");
+	            key["key3"+i] = new Media("/android_asset/www/key3_D1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key4"+i] = new Audio("/android_asset/www/Audio/key4_DD1.mp3");
+	            key["key4"+i] = new Media("/android_asset/www/key4_DD1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key5"+i] = new Audio("/android_asset/www/Audio/key5_E1.mp3");
+	            key["key5"+i] = new Media("/android_asset/www/key5_E1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key6"+i] = new Audio("/android_asset/www/Audio/key6_F1.mp3");
+	            key["key6"+i] = new Media("/android_asset/www/key6_F1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key7"+i] = new Audio("/android_asset/www/Audio/key7_FF1.mp3");
+	            key["key7"+i] = new Media("/android_asset/www/key7_FF1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key8"+i] = new Audio("/android_asset/www/Audio/key8_G1.mp3");
+	            key["key8"+i] = new Media("/android_asset/www/key8_G1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key9"+i] = new Audio("/android_asset/www/Audio/key9_GG1.mp3");
+	            key["key9"+i] = new Media("/android_asset/www/key9_GG1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key10"+i] = new Audio("/android_asset/www/Audio/key10_A1.mp3");
+	            key["key10"+i] = new Media("/android_asset/www/key10_A1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key11"+i] = new Audio("/android_asset/www/Audio/key11_AA1.mp3");
+	            key["key11"+i] = new Media("/android_asset/www/key11_AA1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key12"+i] = new Audio("/android_asset/www/Audio/key12_B1.mp3");
+	            key["key12"+i] = new Media("/android_asset/www/key12_B1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key13"+i] = new Audio("/android_asset/www/Audio/key13_C2.mp3");
+	            key["key13"+i] = new Media("/android_asset/www/key13_C2.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key14"+i] = new Audio("/android_asset/www/Audio/key14_CC2.mp3");
+	            key["key14"+i] = new Media("/android_asset/www/key14_CC2.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key15"+i] = new Audio("/android_asset/www/Audio/key15_D2.mp3");
+	            key["key15"+i] = new Media("/android_asset/www/key15_D2.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key16"+i] = new Audio("/android_asset/www/Audio/key16_DD2.mp3");
+	            key["key16"+i] = new Media("/android_asset/www/key16_DD2.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key17"+i] = new Audio("/android_asset/www/Audio/key17_E2.mp3");
+	            key["key17"+i] = new Media("/android_asset/www/key17_E2.mp3");
 	        }
 
             var makeVerse = new Array();
-            makeVerse["makeVerse1"] = new Audio("Audio/makeverse1.mp3");
-            makeVerse["makeVerse2"] = new Audio("Audio/makeverse2.mp3");
-            makeVerse["makeVerse3"] = new Audio("Audio/makeverse3.mp3");
-            makeVerse["makeVerse4"] = new Audio("Audio/makeverse4.mp3");
+            makeVerse["makeVerse1"] = new Media("/android_asset/www/makeverse1.ogg");
+            makeVerse["makeVerse2"] = new Media("/android_asset/www/makeverse2.ogg");
+            makeVerse["makeVerse3"] = new Media("/android_asset/www/makeverse3.ogg");
+            makeVerse["makeVerse4"] = new Media("/android_asset/www/makeverse4.ogg");
 
             // var grindMessage = new Array("Practice-Skills", "Ask-for-Opinions", "Use-Lyrical-Devices", "Promote-Your-Work");
             //             
