--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -775,68 +775,68 @@
             var problemNumber = 0;
             var gamePoints = 0;
             var verseOn = 0;
-            //             var grindMessage = new Array("Practice-Skills", "Ask-for-Opinions", "Use-Lyrical-Devices", "Promote-Your-Work");
+            //var grindMessage = new Array("Practice-Skills", "Ask-for-Opinions", "Use-Lyrical-Devices", "Promote-Your-Work");
             nextSuperProblem();
 
             var key = new Array();
             
             for(var i=0; i<3; i++) {
-            	key["key1"+i] = new Media("/android_asset/www/key1_C1.mp3");
+            	key["key1"+i] = new Media("/android_asset/key1_C1.mp3");
             }
             for(var i=0; i<3; i++) {
-	            key["key2"+i] = new Media("/android_asset/www/key2_CC1.mp3");
+	            key["key2"+i] = new Media("/android_asset/key2_CC1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key3"+i] = new Media("/android_asset/www/key3_D1.mp3");
+	            key["key3"+i] = new Media("/android_asset/key3_D1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key4"+i] = new Media("/android_asset/www/key4_DD1.mp3");
+	            key["key4"+i] = new Media("/android_asset/key4_DD1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key5"+i] = new Media("/android_asset/www/key5_E1.mp3");
+	            key["key5"+i] = new Media("/android_asset/key5_E1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key6"+i] = new Media("/android_asset/www/key6_F1.mp3");
+	            key["key6"+i] = new Media("/android_asset/key6_F1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key7"+i] = new Media("/android_asset/www/key7_FF1.mp3");
+	            key["key7"+i] = new Media("/android_asset/key7_FF1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key8"+i] = new Media("/android_asset/www/key8_G1.mp3");
+	            key["key8"+i] = new Media("/android_asset/key8_G1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key9"+i] = new Media("/android_asset/www/key9_GG1.mp3");
+	            key["key9"+i] = new Media("/android_asset/key9_GG1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key10"+i] = new Media("/android_asset/www/key10_A1.mp3");
+	            key["key10"+i] = new Media("/android_asset/key10_A1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key11"+i] = new Media("/android_asset/www/key11_AA1.mp3");
+	            key["key11"+i] = new Media("/android_asset/key11_AA1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key12"+i] = new Media("/android_asset/www/key12_B1.mp3");
+	            key["key12"+i] = new Media("/android_asset/key12_B1.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key13"+i] = new Media("/android_asset/www/key13_C2.mp3");
+	            key["key13"+i] = new Media("/android_asset/key13_C2.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key14"+i] = new Media("/android_asset/www/key14_CC2.mp3");
+	            key["key14"+i] = new Media("/android_asset/key14_CC2.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key15"+i] = new Media("/android_asset/www/key15_D2.mp3");
+	            key["key15"+i] = new Media("/android_asset/key15_D2.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key16"+i] = new Media("/android_asset/www/key16_DD2.mp3");
+	            key["key16"+i] = new Media("/android_asset/key16_DD2.mp3");
 	        }
 	        for(var i=0; i<3; i++) {
-	            key["key17"+i] = new Media("/android_asset/www/key17_E2.mp3");
+	            key["key17"+i] = new Media("/android_asset/key17_E2.mp3");
 	        }
 
             var makeVerse = new Array();
-            makeVerse["makeVerse1"] = new Media("/android_asset/www/makeverse1.ogg");
-            makeVerse["makeVerse2"] = new Media("/android_asset/www/makeverse2.ogg");
-            makeVerse["makeVerse3"] = new Media("/android_asset/www/makeverse3.ogg");
-            makeVerse["makeVerse4"] = new Media("/android_asset/www/makeverse4.ogg");
+            makeVerse["makeVerse1"] = new Media("/android_asset/makeverse1.ogg");
+            makeVerse["makeVerse2"] = new Media("/android_asset/makeverse2.ogg");
+            makeVerse["makeVerse3"] = new Media("/android_asset/makeverse3.ogg");
+            makeVerse["makeVerse4"] = new Media("/android_asset/makeverse4.ogg");
 
             // var grindMessage = new Array("Practice-Skills", "Ask-for-Opinions", "Use-Lyrical-Devices", "Promote-Your-Work");
             //             
